// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render contained button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="testID"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "marginHorizontal": 10,
        },
        Object {
          "backgroundColor": "#2cd18a",
          "paddingHorizontal": 60,
          "paddingVertical": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
            "fontWeight": "normal",
          },
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`Button Component should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="testID"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "marginHorizontal": 10,
        },
        Object {},
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2cd18a",
            "fontSize": 14,
            "fontWeight": "normal",
          },
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;
